--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="content">
+  <span>{{ title }} app is running!</span>
+</div>
+
 <input type="text" #input>
 <button (click)="add(input.value)">add</button>
 
